Merge checkpoint 1: the physics demo
Brings in the Aug 27 physics demo (MrPong + physics/ + render/), which until
now lived outside the repo. Wires it to this project's IntelliJ module name
and source root, and updates the docs that described a repo with no code in it.

Physics: RK4 at a fixed 1/480 s over gravity, drag and a saturating Magnus
model; one swept sphere-vs-box impulse solver shared by table, net and floor,
so spin couples through friction rather than being scripted. physics/ imports
no JavaFX, so physics.SelfTest validates it headlessly against closed-form
solutions and ITTF numbers: 68 checks, all passing.

Two fixes on the way in:

- The comparison ghost was sampled by a different rule than the live trail it
  is meant to be compared against. TRAIL_INTERVAL of 2.5 ms is 1.2 physics
  steps at DT = 1/480, and the two paths rounded that fraction in opposite
  directions -- the live trail accumulated up to 2 steps, the ghost rounded
  down to 1. The ghost came out twice as dense and 360 points long against a
  300-dot trail, so it silently dropped the first 0.125 s and no longer began
  where the ball began. Trail sampling is now counted in whole physics steps,
  one constant used by both paths.
- A passing SelfTest check printed "(it clipped the cord)" as its detail,
  which read as the opposite of the result it was attached to.

Also trimmed two pieces of per-frame waste in the render path: the trail is
handed its live deque instead of a fresh 300-element copy each frame, and the
bounce marks are only rewritten when a ball actually lands. Frame rate was
already vsync-capped at 61 fps, so this is about garbage, not speed.

Docs corrected: JavaFX does not need a module path here. The project SDK
liberica-21 is the BellSoft Liberica *Full* build at ~/jdk/jdk-21.0.7-full,
which ships JavaFX 21 as system modules, so stock javac/java works and no
build system is needed. Both documented build commands were run as written.

Co-Authored-By: Claude Opus 5 <nore